kubernetes/apps/base/management/wallos/deployment.yaml
# Wallos - Personal Subscription Tracker
#
# Track recurring subscriptions and expenses.
# https://github.com/ellite/Wallos
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallos
  namespace: management
  labels:
    app.kubernetes.io/name: wallos
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: management
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: wallos
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wallos
        app.kubernetes.io/component: server
        app.kubernetes.io/part-of: management
    spec:
      securityContext:
        fsGroup: 3001
      containers:
        - name: wallos
          image: docker.io/bellamy/wallos:4.6.0 # {"$imagepolicy": "flux-system:wallos"}
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: db
              mountPath: /var/www/html/db
            - name: logos
              mountPath: /var/www/html/images/uploads/logos
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              memory: 128Mi
            limits:
              memory: 256Mi
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: wallos-db
        - name: logos
          persistentVolumeClaim:
            claimName: wallos-logos
