kubernetes/apps/base/management/wallos/service.yaml
# Wallos LoadBalancer Service
#
# Static IP via Cilium L2 LoadBalancer
apiVersion: v1
kind: Service
metadata:
  name: wallos
  namespace: management
  labels:
    app.kubernetes.io/name: wallos
  annotations:
    io.cilium/lb-ipam-ips: "${IP_WALLOS}"
spec:
  type: LoadBalancer
  loadBalancerIP: "${IP_WALLOS}"
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: wallos
