kubernetes/apps/base/management/wallos/ingress.yaml
# Wallos Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallos
  namespace: management
  labels:
    app.kubernetes.io/name: wallos
  annotations:
    kubernetes.io/ingress.class: cilium
spec:
  tls:
    - hosts:
        - wallos.home-infra.net
      secretName: wildcard-home-infra-net-tls
  rules:
    - host: wallos.home-infra.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wallos
                port:
                  number: 80
